fixed spacing and changed background

--- a/public/stylesheets/css.css
+++ b/public/stylesheets/css.css
@@ -72,6 +72,10 @@
   margin-top: 10px;
 }
 
+.big-result {
+  display:inline-block;
+}
+
 .results .header, .results .column {
   flex: 1 0 25%;
 }
